Add Pizza Dough Recipe Page

--- a/Recipes/PizzaDough.html
+++ b/Recipes/PizzaDough.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Spelt Pizza Dough Recipe</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <h3>Learn to make some delicious recipes</h3>
-    <a href="./Recipes/PizzaDough.html">Pizza Dough</a>
+    <h1>Spelt Pizza Dough</h1>
+    <img src="./images/Pizza.jpg">
     
 </body>
 </html>
