Add image, ingredients, and steps to Pizza Dough

--- a/Recipes/PizzaDough.html
+++ b/Recipes/PizzaDough.html
@@ -6,8 +6,19 @@
     <title>Spelt Pizza Dough Recipe</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
     <h1>Spelt Pizza Dough</h1>
-    <img src="./images/Pizza.jpg">
-    
+        <img src="../images/Pizza.jpg" alt="Image of Spelt Dough Pizza">
+    <h2>Description</h2>
+    <p>Spelt pizza dough is made with an ancient grain that is similar to wheat. Sources online say that it is higher in protein than regular pizza dough. It is also known to be easier to digest. You can top this dish with all of your traditioinal favorite pizza toppings.</p>
+    <h2>Ingredients</h2>
+        <ul>
+            <li>3 cups sprouted spelt flour, or as needed, divided</li>
+            <li>1 cup warm water (100 to 105 degrees F/38 to 41 degrees C)</li>
+            <li>2 teaspoons honey</li>
+            <li>1 (.25 ounce) package active dry yeast</li>
+            <li>1 tablespoon extra-virgin olive oil, plus more for oiling the bowl</li>
+            <li>1 teaspoon kosher salt</li>
+        </ul>
 </body>
 </html>
