Add new waffle page with steps, & ingredients

--- a/Recipes/PizzaDough.html
+++ b/Recipes/PizzaDough.html
@@ -20,5 +20,14 @@
             <li>1 tablespoon extra-virgin olive oil, plus more for oiling the bowl</li>
             <li>1 teaspoon kosher salt</li>
         </ul>
+    <h2>Directions</h2>
+        <ol>
+            <li>Whisk 1 cup flour, water, honey, and yeast together in a bowl. Let stand until yeast softens and mixture is bubbly, about 20 minutes.
+            </li>
+            <li>Stir remaining 2 cups flour, olive oil, and salt into yeast mixture. Beat in a stand mixer fitted with a dough hook attachment, adding more flour as necessary, until a soft and tacky dough forms, 3 to 4 minutes. Place dough into an oiled mixing bowl, cover the bowl with a plate, and let rise until doubled in volume, 90 minutes.
+            </li>
+            <li>Punch dough down and transfer to a lightly floured work surface. Divide into four equal balls. Cover each ball and let rest until dough rises slightly, 30 to 45 minutes.
+            </li>
+        </ol>
 </body>
 </html>
