--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>High Protein Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <h3>Learn to make some delicious recipes</h3>
-    <a href="./Recipes/PizzaDough.html">Pizza Dough</a>
-    
+    <h1>High Protein Recipes</h1>
+    <h3>Learn to make some of my favorite high protein recipes from <a href="https://www.allrecipes.com/">allrecipes.com</a></h3>
+    <ul>
+        <li><a href="./Recipes/PizzaDough.html">Spelt Pizza Dough</a></li>
+        <li><a href="./Recipes/Waffles.html">Protein Waffles</a></li>
+    </ul>
 </body>
 </html>
