--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./Recipes/PizzaDough.html">Spelt Pizza Dough</a></li>
         <li><a href="./Recipes/Waffles.html">Protein Waffles</a></li>
+        <li><a href="./Recipes/smoothie.html">Srawberry Smoothie</a></li>
     </ul>
 </body>
 </html>
