Change alt text for waffles.html file

--- a/Recipes/Waffles.html
+++ b/Recipes/Waffles.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spelt Pizza Dough Recipe</title>
+    <title>Protein Waffles Recipe</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
     <h1>Protein Waffles</h1>
-        <img src="../images/waffles.jpg" alt="Image of Spelt Dough Pizza">
+        <img src="../images/waffles.jpg" alt="Image of Protein Waffles">
     <h2>Description</h2>
     <p>These healthy, protein-packed waffles are fluffy and delicious! No waffle iron? No problem! Make them into pancakes instead. Top with berries, bananas, dark chocolate chips, or anything else you like!</p>
     <h2>Ingredients</h2>
