Add style changes to the project

--- a/Recipes/PizzaDough.html
+++ b/Recipes/PizzaDough.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="styles.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spelt Pizza Dough Recipe</title>
@@ -8,9 +9,10 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Spelt Pizza Dough</h1>
-        <img src="../images/Pizza.jpg" alt="Image of Spelt Dough Pizza">
+       
     <h2>Description</h2>
     <p>Spelt pizza dough is made with an ancient grain that is similar to wheat. Sources online say that it is higher in protein than regular pizza dough. It is also known to be easier to digest. You can top this dish with all of your traditioinal favorite pizza toppings.</p>
+    <img src="../images/Pizza.jpg" alt="Image of Spelt Dough Pizza">
     <h2>Ingredients</h2>
         <ul>
             <li>3 cups sprouted spelt flour, or as needed, divided</li>
