--- a/Recipes/Smoothie.html
+++ b/Recipes/Smoothie.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="styles.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strawberry Banana Protein Shake</title>
@@ -8,9 +9,10 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Strawberry Banana Protein Shake</h1>
-        <img src="../images/smoothie.jpg" alt="Image of Strawberry Banana Protein Shake">
     <h2>Description</h2>
     <p> High Protein Shake that is packed with omega 3 fatty acids.</p>
+    <img src="../images/smoothie.jpg" alt="Image of Strawberry Banana Protein Shake">
+
     <h2>Ingredients</h2>
         <ul>
             <li>1.5 teaspoon flax seeds</li>
