--- a/Recipes/Waffles.html
+++ b/Recipes/Waffles.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="styles.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Protein Waffles Recipe</title>
@@ -8,9 +9,9 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Protein Waffles</h1>
-        <img src="../images/waffles.jpg" alt="Image of Protein Waffles">
     <h2>Description</h2>
     <p>These healthy, protein-packed waffles are fluffy and delicious! No waffle iron? No problem! Make them into pancakes instead. Top with berries, bananas, dark chocolate chips, or anything else you like!</p>
+    <img src="../images/waffles.jpg" alt="Image of Protein Waffles">
     <h2>Ingredients</h2>
         <ul>
             <li>1 cup old-fashioned oats</li>
