--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="styles.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Protein Recipes</title>
 </head>
 <body>
     <h1>High Protein Recipes</h1>
-    <h3>Learn to make some of my favorite high protein recipes from <a href="https://www.allrecipes.com/">allrecipes.com</a></h3>
+    <p>Learn to make some of my favorite high protein recipes from <a href="https://www.allrecipes.com/">allrecipes.com</a></p>
     <ul>
         <li><a href="./Recipes/PizzaDough.html">Spelt Pizza Dough</a></li>
         <li><a href="./Recipes/Waffles.html">Protein Waffles</a></li>
